Changes for APR 1.1.0

  *) Remove the runtime test for Sendfile versions on FreeBSD. PR 25718.
     [Mike Silbersack <silby silby.com>, Paul Querna]

  *( rename the fopen defines (APR_READ, APR_WRITE, etc.) to have
     prefix APR_FOPEN_ (keeping the old defines) [Stas]

  *) [NOT COMMITTED?] Add a new PRNG. Note that the implementation of SHA-256
     is a stop-gap pending snarfing the SHA-1 implementation from apr-util
     and upgrading it to do SHA-256. Not yet ready for prime time.
     [Ben Laurie]

  *) Added apr_os_uuid_get() support for Linux via libuuid and for modern 
     BSDs which have uuid_create as part of their libc.
     [Paul Querna]

  *) Added Solaris 10 'Event Ports' as a backend for APR Pollset.  This 
     backend also supports the APR_POLLSET_THREADSAFE flag.
     [Paul Querna]

  *) Added the APR_POLLSET_THREADSAFE flag. This allows multiple threads
     to call the Pollset Add or Remove functions in a thread safe manner.
     Currently only EPoll and KQueue support this flag. [Paul Querna]

  *) Split poll/unix/poll.c into separate files for each Poll or Pollset 
     implementation. [Paul Querna]

  *) Rewrite apr_file_printf to handle arbitrary length strings.
     PR 28029.  [Chris Knight <Christopher.D.Knight nasa.gov>,
     Garrett Rooney <rooneg electricjellyfish.net>]

Changes for APR 1.0.1

  *) apr_password_get(): Fix the check for buffer overflow.  [Jeff Trawick]

  *) Fix HUP return codes in pollset when using KQueue.
     [Paul Querna]

  *) Prevent unbounded memory use during repeated operations on a hash table.
     [Julian Foad <julianfoad btopenworld.com>

  *) Moved repository to SVN
     [Hackathon]

  *) jlibtool: Ignore '-export-symbols-regexp' option.
     [Justin Erenkrantz]

  *) fix apr_file_dup and apr_file_dup2 win32 implementations
     to create a mutex [Steve Hay <steve.hay uk.radan.com>]

  *) Makes the threads to behave like on posix. If the thread is created